test/classes/errors/nilability-init-var/init-var-oknil-shared-from-nonnil-owned.future
bug: can't assign to nilable shared from non-nilable owned

Not only that, but the reported error is unclear.
